// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runner component renders InstallState.downloading 1`] = `
<Blueprint3.Button
  className="button-run"
  disabled={true}
  icon={
    <Blueprint3.Spinner
      size={16}
      value={50}
    />
  }
  text="Downloading"
/>
`;

exports[`Runner component renders InstallState.installed 1`] = `
<Blueprint3.Button
  className="button-run"
  disabled={false}
  icon="play"
  onClick={[MockFunction]}
  text="Run"
/>
`;

exports[`Runner component renders InstallState.missing 1`] = `
<Blueprint3.Button
  className="button-run"
  disabled={true}
  icon={
    <Blueprint3.Spinner
      size={16}
    />
  }
  text="Checking status"
/>
`;

exports[`Runner component renders InstallState.installing 1`] = `
<Blueprint3.Button
  className="button-run"
  disabled={true}
  icon={
    <Blueprint3.Spinner
      size={16}
    />
  }
  text="Unzipping"
/>
`;

exports[`Runner component renders idle 1`] = `
<Blueprint3.Button
  className="button-run"
  disabled={false}
  icon="play"
  onClick={[MockFunction]}
  text="Run"
/>
`;

exports[`Runner component renders installing modules 1`] = `
<Blueprint3.Button
  className="button-run"
  disabled={false}
  icon={
    <Blueprint3.Spinner
      size={16}
    />
  }
  text="Installing modules"
/>
`;

exports[`Runner component renders running 1`] = `
<Blueprint3.Button
  active={true}
  className="button-run"
  disabled={false}
  icon="stop"
  onClick={[MockFunction]}
  text="Stop"
/>
`;
